--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
- name: html-svc
- labels:
- app: html-svc
+  name: hello-world-svc
+  labels:
+    app: hello-world-svc
 spec:
- selector:
- app: hello-world
- type: LoadBalancer
- ports:
- - port: 80
- targetPort: 80
+  selector:
+    app: hello-world
+  type: LoadBalancer
+  ports:
+    - port: 80
+      targetPort: 80
